@@ -9,6 +9,7 @@ README.md
 t/00-load.t
 t/10-compile.t
 t/20-new.t
+t/30-basics.t
 t/comment-spelling.t
 t/coverage.t
 t/critic.t
